--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MetaCoin - Default Truffle App</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <title>Dennis' prediction market</title>
   <link href="./app.css" rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
 </head>
-<body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
-
-  <br>
-  <h1>Send</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
+<body ng-app='predictionMarketApp' ng-controller='predictionMarketController'>
+  <div id='accounts'>
+    <!-- chose user address, show account balance, etc. -->
+    <h1>User accounts</h1>
+    <p>
+    Chosen account: {{account}}<br />
+    Balance: {{balance}}<br />
+    Select a different account:<br />
+    <select ng-model='account' ng-options="a for a in accounts" ng-change='updateBalance()'></select>
+    </p>
+  </div>
+  <div id='questions'>
+    <!-- show all current questions and all bets on the question -->
+    <h1>Questions</h1>
+    <ul>
+      <li ng-repeat="q in questions">
+      {{q.id}}: {{q.text}}.
+      Resolved: {{q.resolved}}. Truth: {{q.truth}}
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
